<resources>
    <string name="app_name">OI Timesheet</string>
    <string name="app_descr">Protocol your working time</string>
    <string name="title_create">Create job</string>
    <string name="title_edit">Edit job</string>
    <string name="customer">Customer/Project:</string>
    <string name="job_done">Job done</string>
    <string name="break_info">Break: %s</string>
    <string name="duration_info">Duration: %s</string>
    <string name="total_info">Total: $%s</string>
    <string name="extras_info">Extras: $%s</string>
    <string name="hourly_rate_info">Hourly rate: $%s</string>
    <string name="having_a_break">Having a break</string>
    <string name="end_of_break">End of break</string>
    <string name="started_at">Started at %s</string>
    <string name="finshed">Finished</string>
    <string name="job_not_yet_started">Not yet started.</string>
    <string name="starting_job">Starting job</string>
    <string name="hourly_rate">Rate</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="break_in_minutes">Break (in minutes)</string>
    <string name="unknown">\?</string>
    <string name="customer_hint">Touch to see list</string>
    <string name="customer_hint_first_time">Enter customer/project name</string>
    <string name="break_duration">Break</string>
    <string name="planned_time">Planned date</string>
    <string name="planned_duration">Planned duration</string>
    <string name="continue_now">Cont. now</string>
    <string name="continue_tomorrow">Cont. next day</string>
    <string name="note">Job note:</string>
    <string name="hour_short">h</string>
    <string name="minute_short">min</string>
    <string name="recent_notes">Recent notes</string>
    <string name="no_recent_notes_available">No recent notes available.</string>
    <string name="pick_contact">Choose from contacts</string>
    <string name="call_contact">Call customer</string>
    <string name="simple_rate">One standard rate</string>
    <string name="two_rates">One standard rate, one overtime rate</string>
    <string name="thre_rates">One standard rate, two overtime rates</string>
    <string name="dialog_restart_job">Do you really want to restart the job?</string>
    <string name="dialog_stop_job">Do you want to end the job with the current time? Or do you want to continue the job?</string>
    <string name="end_now">End now</string>
    <string name="continue_button">Continue</string>
    <string name="calendar_missing">Suitable calendar application missing.</string>
    <string name="recent_descriptions">Recent descriptions</string>
    <string name="total">Total</string>
    <string name="job_denied">Job denied, no customer specified.</string>
    <string name="insert_job_full">Add job for %1$s, estimated duration: %2$s.</string>
    <string name="insert_job_no_duration">Add job for %s.</string>
    <string name="insert_job_no_date">Add job, estimated duration: %s.</string>
    <string name="insert_job">Add job, no further details given.</string>
    <string name="job_in_progress">Job still in progress.</string>
    <string name="jobs_in_progress">%s jobs still in progress.</string>
    <string name="trial_version_description">The trial version is limited to 10 jobs.</string>
    <string name="enter_license_code">Enter license code</string>
    <string name="ok">Ok</string>
    <string name="alert">Please note</string>
    <string name="no_jobs">Job list empty.</string>
    <string name="spinner_prompt">Select customer/project</string>
    <string name="all_customers">All customers/projects</string>
    <string name="number_of_jobs_info">Number of jobs: %s</string>
    <string name="invoice_item_type_spinner">Select invoice item type</string>
    <string name="description">Description</string>
    <string name="value">Value ($)</string>
    <string name="general_type">Extra value or deduction</string>
    <string name="start_value">Start value</string>
    <string name="end_value">End value</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="mileage">Mileage</string>
    <string name="enter_digits_only">Enter digits only</string>
    <string name="enter_numbers_only">Enter numbers only</string>
    <string name="rate_per_mile">Rate per mile (¢)</string>
    <string name="no_extra_items">No invoice items</string>
    <string name="error_title">Error</string>
    <string name="error_message">Error loading job</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_insert">Add job</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_list">List all</string>
    <string name="menu_export">Export</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_start">Start</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_continue">Continue</string>
    <string name="menu_end">End now</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_send">Delegate</string>
    <string name="menu_extra_items">Invoice items</string>
    <string name="menu_timexchange">TimeXchange</string>
    <string name="dialog_delete_all">Do you really want to delete all information for: %s?</string>
    <string name="dialog_delete_last">Do you really want to delete last entry for: %s?</string>
    <string name="delete_all">Delete all</string>
    <string name="leave_template">Leave template</string>
    <string name="received_job">The following job has been received:</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="duration">Duration %1$sh %2$smin</string>
    <string name="date_time_set">Set</string>
    <string name="file_path">File path</string>
    <string name="file_import">Import</string>
    <string name="file_export">Export</string>
    <string name="default_path">/sdcard/timesheet.csv</string>
    <string name="default_directory">/sdcard/timesheet</string>
    <string name="calendar_entries_added_or_updated">Calendar entries are added or updated.</string>
    <string name="preference_general">General settings</string>
    <string name="preference_general_summary">Start option, billing unit, notifications, formats, calendar.</string>
    <string name="preference_export_completed_only">Completed only</string>
    <string name="preference_export_completed_only_summary">Only export completed jobs.</string>
    <string name="preference_export_filename">Filename</string>
    <string name="preference_export_filename_summary">Full path for single export file.</string>
    <string name="preference_export_directory">Directory</string>
    <string name="preference_export_directory_summary">Full path for export directory.</string>
    <string name="preference_export_replace_br">Replace line breaks</string>
    <string name="preference_export_replace_br_summary">Replace line breaks with \\n</string>
    <string name="preference_export_totals">Include totals</string>
    <string name="preference_export_totals_summary">Add row at the end with total hours, and total amount</string>
    <string name="preference_export_csv">Export CSV</string>
    <string name="preference_export_csv_summary">Settings for CSV file output</string>
    <string name="preference_export_single_file">One file for all customers</string>
    <string name="preference_export_single_file_summary">If not checked one file per customer in export directory is used.</string>
    <string name="preference_export_calendar">Update calendar</string>
    <string name="preference_export_calendar_summary">Date and duration are added or update in selected calendar.</string>
    <string name="preference_date_format">Date format</string>
    <string name="preference_date_format_summary">Choose format of dates.</string>
    <string name="preference_date_format_dialog_title">Choose date format</string>
    <string name="preference_time_format">Time format</string>
    <string name="preference_time_format_summary">Choose 24 hour display or AM/PM.</string>
    <string name="preference_time_format_dialog_title">Choose time format</string>
    <string name="preference_application">Application settings</string>
    <string name="preference_start_jobs_immediately">Start jobs immediately</string>
    <string name="preference_start_jobs_immediately_summary">Immediately start billing when adding new job.</string>
    <string name="preference_ask_if_file_exists">Ask if file exists</string>
    <string name="preference_ask_if_file_exists_summary">If checked a dialog appears to confirm overwriting if the export file already exists.</string>
    <string name="preference_billing_unit">Billing unit</string>
    <string name="preference_billing_unit_summary">Round times according to the interval specified.</string>
    <string name="preference_billing_unit_dialog_title">Choose interval</string>
    <string name="preference_omit_templates">Omit Templates</string>
    <string name="preference_omit_templates_summary">If checked entries without start and end date are not exported.</string>
    <string name="preference_show_notification">Show notification</string>
    <string name="preference_show_notification_summary">If checked notification icon is shown if jobs are in progress.</string>
    <string name="preference_scheduled_jobs">Scheduled Jobs</string>
    <string name="preference_calendar">Calendar</string>
    <string name="preference_calendar_summary">Events for jobs are added to the selected calendar.</string>
    <string name="preference_calendar_dialog_title">Choose calendar for job events</string>
    <string name="preference_reminder">Reminder</string>
    <string name="preference_reminder_summary">Alert will be triggered selected time before scheduled job.</string>
    <string name="preference_reminder_dialog_title">Select time for reminder</string>
    <string name="preference_license">License</string>
    <string name="preference_get_license">License</string>
    <string name="preference_get_license_summary">Get or update license.</string>
    <string name="preference_get_license_from">Get license from</string>
    <string name="preference_license_market">Android Market</string>
    <string name="preference_license_market_summary">Get license from Android Market.</string>
    <string name="preference_license_developer">OpenIntents</string>
    <string name="preference_license_developer_summary">Enter or update license key from OpenIntents.</string>
    <string name="preference_license_pdassi">android.pdassi</string>
    <string name="preference_license_pdassi_summary">Get license from android.pdassi.</string>
    <string name="preference_extensions">Extensions</string>
    <string name="preference_get_extensions">Get new extensions</string>
    <string name="preference_get_extensions_summary">Search for extensions online.</string>
    <string name="preference_get_extensions_from">Get extensions from</string>
    <string name="preference_extensions_market">Android Market</string>
    <string name="preference_extensions_market_summary">Search for extensions at Android Market.</string>
    <string name="preference_extensions_developer">OpenIntents</string>
    <string name="preference_extensions_developer_summary">Get extensions from the OpenIntents homepage.</string>
    <string name="preference_extensions_market_link">market://search?q=extension%20Timesheet</string>
    <string name="preference_extensions_developer_link">http://www.openintents.biz/timesheet.html</string>
    <string name="preference_license_market_link">market://search?q=pname:org.openintents.timesheet.license.market</string>
    <string name="preference_license_pdassi_link">http://android.pdassi.de/121397/Timesheet.html</string>
</resources>