<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_application">
        <PreferenceScreen
            android:key="preference_screen_general"
            android:summary="@string/preference_general_summary"
            android:title="@string/preference_general">
            <PreferenceCategory android:title="@string/preference_general">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="start_jobs_immediately"
                    android:summary="@string/preference_start_jobs_immediately_summary"
                    android:title="@string/preference_start_jobs_immediately"/>
                <ListPreference
                    android:defaultValue="60000"
                    android:dialogTitle="@string/preference_billing_unit_dialog_title"
                    android:entries="@array/entries_billing_unit"
                    android:entryValues="@array/entries_billing_unit_values"
                    android:key="billing_unit"
                    android:summary="@string/preference_billing_unit_summary"
                    android:title="@string/preference_billing_unit"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="show_notification"
                    android:summary="@string/preference_show_notification_summary"
                    android:title="@string/preference_show_notification"/>
                <ListPreference
                    android:defaultValue=""
                    android:dialogTitle="@string/preference_date_format_dialog_title"
                    android:entries="@array/entries_date_format"
                    android:entryValues="@array/entries_date_format_values"
                    android:key="export_date_format"
                    android:summary="@string/preference_date_format_summary"
                    android:title="@string/preference_date_format"/>
                <ListPreference
                    android:defaultValue=""
                    android:dialogTitle="@string/preference_time_format_dialog_title"
                    android:entries="@array/entries_time_format"
                    android:entryValues="@array/entries_time_format_values"
                    android:key="export_time_format"
                    android:summary="@string/preference_time_format_summary"
                    android:title="@string/preference_time_format"/>
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preference_scheduled_jobs">
                <org.openintents.util.CalendarPreference
                    android:defaultValue="1"
                    android:dialogTitle="@string/preference_calendar_dialog_title"
                    android:key="calendar_id"
                    android:summary="@string/preference_calendar_summary"
                    android:title="@string/preference_calendar"/>
                <ListPreference
                    android:defaultValue="10"
                    android:dialogTitle="@string/preference_reminder_dialog_title"
                    android:entries="@array/entries_reminder"
                    android:entryValues="@array/entries_reminder_values"
                    android:key="reminder"
                    android:summary="@string/preference_reminder_summary"
                    android:title="@string/preference_reminder"/>
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="preference_screen_export"
            android:summary="@string/preference_export_csv_summary"
            android:title="@string/preference_export_csv">
            <PreferenceCategory android:title="@string/preference_export_csv">
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="ask_if_file_exists"
                    android:summary="@string/preference_ask_if_file_exists_summary"
                    android:title="@string/preference_ask_if_file_exists"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="export_complete_only"
                    android:summary="@string/preference_export_completed_only_summary"
                    android:title="@string/preference_export_completed_only"/>
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="omit_templates"
                    android:summary="@string/preference_omit_templates_summary"
                    android:title="@string/preference_omit_templates"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="export_replace_br"
                    android:summary="@string/preference_export_replace_br_summary"
                    android:title="@string/preference_export_replace_br"/>
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="export_totals"
                    android:summary="@string/preference_export_totals_summary"
                    android:title="@string/preference_export_totals"/>
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="export_single_file"
                    android:summary="@string/preference_export_single_file_summary"
                    android:title="@string/preference_export_single_file"/>
                <EditTextPreference
                    android:defaultValue="@string/default_path"
                    android:key="export_filename"
                    android:summary="@string/preference_export_filename_summary"
                    android:title="@string/preference_export_filename"/>
                <EditTextPreference
                    android:defaultValue="@string/default_directory"
                    android:key="export_directory"
                    android:summary="@string/preference_export_directory_summary"
                    android:title="@string/preference_export_directory"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="export_calendar"
                    android:summary="@string/preference_export_calendar_summary"
                    android:title="@string/preference_export_calendar"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_license">
        <PreferenceScreen
            android:key="preference_screen_license"
            android:summary="@string/preference_get_license_summary"
            android:title="@string/preference_get_license">
            <PreferenceCategory android:title="@string/preference_get_license_from">
                <PreferenceScreen
                    android:key="preference_license_market"
                    android:summary="@string/preference_license_market_summary"
                    android:title="@string/preference_license_market">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/preference_license_market_link"/>
                </PreferenceScreen>
                <org.openintents.distribution.LicensePreference
                    android:defaultValue=""
                    android:key="org.openintents.lickey"
                    android:summary="@string/preference_license_developer_summary"
                    android:title="@string/preference_license_developer"/>
                <PreferenceScreen
                    android:key="preference_license_pdassi"
                    android:summary="@string/preference_license_pdassi_summary"
                    android:title="@string/preference_license_pdassi">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/preference_license_pdassi_link"/>
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_extensions">
        <PreferenceScreen
            android:key="preference_screen_extensions"
            android:summary="@string/preference_get_extensions_summary"
            android:title="@string/preference_get_extensions">
            <PreferenceCategory android:title="@string/preference_get_extensions_from">
                <PreferenceScreen
                    android:key="preference_extensions_market"
                    android:summary="@string/preference_extensions_market_summary"
                    android:title="@string/preference_extensions_market">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/preference_extensions_market_link"/>
                </PreferenceScreen>
                <PreferenceScreen
                    android:summary="@string/preference_extensions_developer_summary"
                    android:title="@string/preference_extensions_developer">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/preference_extensions_developer_link"/>
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
