<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_value"/>

    <EditText
        android:id="@id/start_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_value"/>

    <EditText
        android:id="@id/end_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_per_mile"/>

    <EditText
        android:id="@id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
</LinearLayout>
