<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2008-2017 OpenIntents.org
 *
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/customer_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer"/>

                <AutoCompleteTextView
                    android:id="@+id/customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:capitalize="words"
                    android:hint="@string/customer_hint"
                    android:singleLine="true"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/start_value"/>

            <EditText
                android:id="@+id/set_mileage_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:singleLine="true"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/end_value"/>

            <EditText
                android:id="@+id/set_mileage_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:singleLine="true"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/total"/>

            <EditText
                android:id="@+id/set_mileage_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:singleLine="true"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_hourlyrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/hourly_rate"/>

            <EditText
                android:id="@+id/set_mileage_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:singleLine="true"
                android:text=""/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <view
            android:id="@+id/note"
            class="org.openintents.timesheet.LinedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="sentences"
            android:text="note"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/recent_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/recent_descriptions"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
